--- a/index.html
+++ b/index.html
@@ -474,10 +474,8 @@
                     </div>
                     <h3 class="text-xl font-space font-semibold mb-4">Minat & Hobi</h3>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-dark-700 rounded-full text-xs text-gray-300">Silat</span>
                         <span class="px-3 py-1 bg-dark-700 rounded-full text-xs text-gray-300">Seni</span>
                         <span class="px-3 py-1 bg-dark-700 rounded-full text-xs text-gray-300">Musik</span>
-                        <span class="px-3 py-1 bg-dark-700 rounded-full text-xs text-gray-300">Organisasi</span>
                     </div>
                 </div>
             </div>
@@ -530,7 +528,7 @@
                         <div class="glass rounded-2xl p-6 ml-4">
                             <div class="flex items-center justify-between mb-4">
                                 <span class="text-accent-glow text-sm font-medium">Agt - Okt 2024</span>
-                                <span class="px-3 py-1 bg-green-500/20 text-green-400 text-xs rounded-full">Contract</span>
+                                <span class="px-3 py-1 bg-green-500/20 text-green-400 text-xs rounded-full">Magang</span>
                             </div>
                             <h3 class="text-xl font-space font-semibold mb-2">HR GA</h3>
                             <p class="text-gray-500 text-sm mb-4">PT. Kalimantan Sawit Kusuma (KSK)</p>
@@ -552,40 +550,15 @@
                     </div>
                 </div>
                 
-                <div class="space-y-12">
-                    <div class="timeline-item reveal" style="transition-delay: 0.2s;">
-                        <div class="glass rounded-2xl p-6 ml-4">
-                            <div class="flex items-center justify-between mb-4">
-                                <span class="text-accent-glow text-sm font-medium">Jan - Jun 2020</span>
-                                <span class="px-3 py-1 bg-blue-500/20 text-blue-400 text-xs rounded-full">Full-time</span>
-                            </div>
-                            <h3 class="text-xl font-space font-semibold mb-2">General Affairs (GA)</h3>
-                            <p class="text-gray-500 text-sm mb-4">PT. Supernova Flexible Packaging</p>
-                            <ul class="space-y-2 text-gray-400 text-sm">
-                                <li class="flex items-start gap-2">
-                                    <i data-lucide="check-circle" class="w-4 h-4 text-accent-glow mt-0.5 flex-shrink-0"></i>
-                                    Pengadaan dan pengelolaan aset perusahaan
-                                </li>
-                                <li class="flex items-start gap-2">
-                                    <i data-lucide="check-circle" class="w-4 h-4 text-accent-glow mt-0.5 flex-shrink-0"></i>
-                                    Manajemen fasilitas dan hubungan vendor
-                                </li>
-                                <li class="flex items-start gap-2">
-                                    <i data-lucide="check-circle" class="w-4 h-4 text-accent-glow mt-0.5 flex-shrink-0"></i>
-                                    Administrasi umum perusahaan
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                     
                     <div class="timeline-item reveal" style="transition-delay: 0.3s;">
                         <div class="glass rounded-2xl p-6 ml-4">
                             <div class="flex items-center justify-between mb-4">
-                                <span class="text-accent-glow text-sm font-medium">Internship</span>
-                                <span class="px-3 py-1 bg-orange-500/20 text-orange-400 text-xs rounded-full">Magang</span>
+                                <span class="text-accent-glow text-sm font-medium">Full-time</span>
+                                <span class="px-3 py-1 bg-orange-500/20 text-orange-400 text-xs rounded-full">Full-time</span>
                             </div>
                             <h3 class="text-xl font-space font-semibold mb-2">Teknisi HVAC Engineering</h3>
-                            <p class="text-gray-500 text-sm mb-4">Magang</p>
+                            <p class="text-gray-500 text-sm mb-4">PT. Supernova Flexible Packaging</p>
                             <ul class="space-y-2 text-gray-400 text-sm">
                                 <li class="flex items-start gap-2">
                                     <i data-lucide="check-circle" class="w-4 h-4 text-accent-glow mt-0.5 flex-shrink-0"></i>
